--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -12,8 +12,8 @@
 				li {
 					position: relative;
 					border-top: none;
-					margin: 0.5em 0 0 0;
-					padding: 0.5em 0 0 0;
+					margin: 0 0 0 0;
+					padding: 0 0 0 0;
 					display: inline-block;
 					a, span {
 						padding:  0 30px;
