--- a/assets/sass/components/_listings_filter.scss
+++ b/assets/sass/components/_listings_filter.scss
@@ -72,17 +72,20 @@
 		}
 		> form {
 			> ul {
-
 				> li {
 					border-top: solid 1px _palette(border);
 					margin: 0.5em 0 0 0;
 					padding: 0.5em 0 0 0;
-
+					input[type="text"] {
+						border-radius: 5px;
+						height: 30px;
+						width: 100%;
+					}
 					> ul {
 						color: _palette(fg-light);
 						display: none;
 						margin: 0.5em 0 1.5em 0;
-						padding-left: 1em;
+						padding-left: 0;
 
 						a, span {
 							font-size: 0.8em;
