--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -9,8 +9,9 @@
 	#header {
 		@include vendor('display', 'flex');
 		border-bottom: solid 5px _palette(accent);
-		padding: 6em 0 1em 0;
+		padding: 2em 0 1em 0;
 		position: relative;
+		align-items: center;
 
 		> * {
 			@include vendor('flex', '1');
