--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -51,6 +51,7 @@
 	@import 'components/features';
 	@import 'components/posts';
 	@import 'components/listings_filter';
+	@import "~react-datepicker/src/stylesheets/datepicker";
 
 // Layout.
 
