--- a/assets/sass/layout/_sidebar.scss
+++ b/assets/sass/layout/_sidebar.scss
@@ -11,11 +11,11 @@
 			@include icon(false, solid);
 			position: relative;
 
-			&:before {
+			&:before, .search-icon {
 				@include vendor('transform', 'scaleX(-1)');
 				color: _palette(fg);
 				content: '\f002';
-				cursor: default;
+				cursor: pointer;
 				display: block;
 				font-size: 1.5em;
 				height: _size(element-height) / 1.375;
