--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -14,7 +14,7 @@
 		> .inner {
 			@include padding(0, 6em);
 			margin: 0 auto;
-			max-width: 110em;
+			max-width: 1512px;
 
 			> section {
 				@include padding(6em, 0);
