--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -8,6 +8,7 @@
 
 	#wrapper {
 		@include vendor('display', 'flex');
-		@include vendor('flex-direction', 'row-reverse');
+		@include vendor('flex-direction', 'row');
+		justify-content: flex-start;
 		min-height: 100vh;
 	}
