--- a/assets/sass/components/_item_info.scss
+++ b/assets/sass/components/_item_info.scss
@@ -1,30 +1,49 @@
 .item-info {
-	&--header {
-		display: flex;
-		justify-content: space-between;
-		flex-direction: row;
-		&--title {
+  &--header {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
 
-		}
-	}
-	&--list {
-		list-style: none;
-		padding: 0;
-		li {
-			padding: 0;
-		}
-		&--row {
-			&--label {
-				font-size: 16px;
-				font-weight: bold;
-				text-align: left;
-			}
-			&--value {
+    &--title {
 
-				p {
-					font-size: 14px;
-				}
-			}
-		}
-	}
+    }
+  }
+
+  &--body {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+  }
+
+  .item-info--image {
+    max-width: 300px;
+    img {
+      width: 100%;
+    }
+  }
+
+  .item-info--list {
+    list-style: none;
+    padding: 0;
+
+    li {
+      padding: 0;
+    }
+
+    &--row {
+      &--label {
+        font-size: 16px;
+        font-weight: bold;
+        text-align: left;
+      }
+
+      &--value {
+
+        p {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+
 }
