--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -28,8 +28,6 @@
 								& + ul {
 									display: block;
 									position: absolute;
-									top: 0;
-									left: 0;
 								}
 
 								&:before {
@@ -109,7 +107,7 @@
 				> ul {
 					color: _palette(fg-light);
 					display: none;
-					margin: 0.5em 0 1.5em 0;
+					margin: 0 0 0 0;
 					padding-left: 1em;
 
 					a, span {
