--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,6 +6,7 @@
 @import 'libs/html-grid';
 @import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic|Roboto+Slab:400,700');
 
 /*
@@ -54,6 +55,7 @@
 	@import 'components/listings_filter';
 	@import 'components/listings_block';
 	@import 'components/item_info';
+	@import 'components/loader';
 	@import "~react-datepicker/src/stylesheets/datepicker";
 
 // Layout.
