Added pagination and changed authentication functionality

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,4 +15,5 @@
 @import 'components/loader';
 @import 'components/listings-filters';
 @import 'components/listings-block';
+@import 'components/pagination';
 @import "~react-datepicker/src/stylesheets/datepicker";
