Adding real estate listings

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,6 +4,8 @@
 @import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800');
+@import "fonts/flaticon";
+@import "../css/fonts/style.css";
 /* Base */
 @import "site-base";
 /* Navbar */
@@ -15,5 +17,7 @@
 @import 'components/loader';
 @import 'components/listings-filters';
 @import 'components/listings-block';
+@import 'components/tabs';
+@import 'components/grid-item';
 @import 'components/pagination';
 @import "~react-datepicker/src/stylesheets/datepicker";
