--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,6 +10,8 @@
 @import "site-base";
 /* Navbar */
 @import "site-navbar";
+@import "layout/menu";
+@import "layout/sidebar";
 /* Blocks */
 @import "site-blocks";
 @import "layout/site-footer";
