Pagination refactoring and adding login, register session functionality

--- a/assets/scss/_site-navbar.scss
+++ b/assets/scss/_site-navbar.scss
@@ -13,7 +13,9 @@
 	@include media-breakpoint-down(sm) {
 		top: 0;
 	}
-
+	a {
+		cursor: pointer;
+	}
 	.site-logo {
 		position: relative;
 		left: 0;
