Adding user account functionality

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,6 +16,7 @@
 @import "site-blocks";
 @import "layout/site-footer";
 
+@import 'components/forms';
 @import 'components/loader';
 @import 'components/listings-filters';
 @import 'components/listings-block';
