--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,4 +23,5 @@
 @import 'components/tabs';
 @import 'components/grid-item';
 @import 'components/pagination';
+@import 'components/user_account_area';
 @import "~react-datepicker/src/stylesheets/datepicker";
