--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -1,3 +1,13 @@
+
+.auth-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  text-align: center;
+  &--button {
+    margin: 10px 0;
+  }
+}
 .site-form {
   &--error {
     &--block {
