--- a/assets/scss/components/_forms.scss
+++ b/assets/scss/components/_forms.scss
@@ -4,8 +4,14 @@
   flex-direction: column;
   margin: auto;
   text-align: center;
+  max-width: 300px;
   &--button {
     margin: 10px 0;
+  }
+  .site-form--error--field {
+    padding: 0;
+    color: #f23a2e;
+    font-size: 15px;
   }
 }
 .site-form {
